--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ workflows:
   version: 2
   build_deploy:
     jobs:
-      - build:
+      - build
       - lint:
           requires:
             - build
